--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,6 +35,7 @@ spring:
     activate:
       on-profile: dev
     import:
+      - classpath:mysql-conn.yml # datasource: driver, url, username, password
       - classpath:mysql-conn-chanwoo.yml # datasource: driver, url, username, password
   jpa:
     hibernate:
@@ -45,7 +46,9 @@ spring:
     activate:
       on-profile: prod
     import:
+      - classpath:mysql-conn.yml # datasource: driver, url, username, password
       - classpath:mysql-conn-chanwoo.yml # datasource: driver, url, username, password
+
   jpa:
     hibernate:
       ddl-auto: none
