--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+# ??
+
+#springdoc swagger
 springdoc:
   api-docs:
     path: /docs
@@ -6,11 +9,7 @@ springdoc:
     display-request-duration: true
   cache:
     disabled: true
-server:
-  error:
-    include-stacktrace: never
-    include-message: always
-    include-binding-errors: never
+
 ---
 spring:
   config:
@@ -28,7 +27,11 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
-
+server:
+  error:
+    include-stacktrace: never
+    include-message: always
+    include-binding-errors: never
 ---
 spring:
   config:
@@ -36,7 +39,6 @@ spring:
       on-profile: dev
     import:
       - classpath:mysql-conn.yml # datasource: driver, url, username, password
-      - classpath:mysql-conn-chanwoo.yml # datasource: driver, url, username, password
   jpa:
     hibernate:
       ddl-auto: update
@@ -47,8 +49,6 @@ spring:
       on-profile: prod
     import:
       - classpath:mysql-conn.yml # datasource: driver, url, username, password
-      - classpath:mysql-conn-chanwoo.yml # datasource: driver, url, username, password
-
   jpa:
     hibernate:
       ddl-auto: none
