#31-배포 스크립트 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
 
   mysql:
     image: mysql:5.7
+#    platform: linux/amd64 #for apple silicon mac
+
     environment:
       MYSQL_DATABASE: "moneybook-prod"
       MYSQL_ROOT_PASSWORD: "root@@"
